--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ maintainer = "The Ord Maintainers"
 members = [".", "test-bitcoincore-rpc", "crates/*"]
 
 [dependencies]
+dal = { path = "crates/dal" }
+entities = { path = "crates/entities" }
+
 anyhow = { version = "1.0.56", features = ["backtrace"] }
 async-trait = "0.1.72"
 axum = { version = "0.6.1", features = ["headers", "http2"] }
@@ -48,7 +51,7 @@ mime = "0.3.16"
 mime_guess = "2.0.4"
 miniscript = "10.0.0"
 mp4 = "0.14.0"
-ord-bitcoincore-rpc = "0.17.1"
+brc20-bitcoincore-rpc = "0.17.0"
 redb = "1.4.0"
 regex = "1.6.0"
 rss = "2.0.1"
@@ -65,6 +68,19 @@ tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.9"
 tokio-util = {version = "0.7.3", features = ["compat"] }
 tower-http = { version = "0.4.0", features = ["compression-br", "compression-gzip", "cors", "set-header"] }
+
+
+[dependencies.sea-orm]
+features = [
+    "sqlx-postgres",
+    "sqlx-mysql",
+    "runtime-tokio-native-tls",
+    "macros",
+    "debug-print",
+    "with-bigdecimal",
+]
+version = "0.12.2"
+
 
 [dev-dependencies]
 criterion = "0.5.1"
