--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,10 +64,18 @@ serde_yaml = "0.9.17"
 sha3 = "0.10.8"
 sysinfo = "0.30.3"
 tempfile = "3.2.0"
+thiserror = "1.0.51"
 tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.9"
-tokio-util = {version = "0.7.3", features = ["compat"] }
-tower-http = { version = "0.4.0", features = ["compression-br", "compression-gzip", "cors", "set-header"] }
+tokio-util = { version = "0.7.3", features = ["compat"] }
+tower-http = { version = "0.4.0", features = [
+    "compression-br",
+    "compression-gzip",
+    "cors",
+    "set-header",
+] }
+rmp-serde = "1.1.2"
+num-traits = "0.2"
 
 
 [dependencies.sea-orm]
