--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,7 +76,7 @@ tower-http = { version = "0.4.0", features = [
 ] }
 rmp-serde = "1.1.2"
 num-traits = "0.2"
-
+bigdecimal = "0.4"
 
 [dependencies.sea-orm]
 features = [
