--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,8 @@ tower-http = { version = "0.4.0", features = [
 rmp-serde = "1.1.2"
 num-traits = "0.2"
 bigdecimal = "0.4"
+once_cell = "1.19.0"
+
 
 [dependencies.sea-orm]
 features = [
